--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,9 @@ description: > # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://kwmassage.com" # the base hostname & protocol for your site
+permalink: /:categories/:title
 twitter_username: jekyllrb
 github_username:  jekyll
-
+exclude: [/__wp_backup__/]
 # Build settings
 markdown: kramdown
