--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@ description: > # this means to ignore newlines until "baseurl:"
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://kwmassage.com" # the base hostname & protocol for your site
-permalink: /:categories/:title
+url: "http://localhost:4000" # the base hostname & protocol for your site
+permalink: /:categories/:title/
 twitter_username: jekyllrb
 github_username:  jekyll
-exclude: [/__wp_backup__/]
+exclude: [/__wp_backup__/, lib]
 # Build settings
 markdown: kramdown
