--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,8 @@ description: > # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://localhost:4000" # the base hostname & protocol for your site
 permalink: /:categories/:title/
+paginate: 10
+paginate_path: "/knowledge-centre/page/:num"
 twitter_username: jekyllrb
 github_username:  jekyll
 exclude: [/__wp_backup__/, lib]
