--- a/_config_production.yml
+++ b/_config_production.yml
@@ -7,7 +7,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog/
 destination: _site_production
-url: "www.kwmassage.com" # the base hostname & protocol for your site
+baseurl: "" # the base hostname & protocol for your site
 permalink: /:categories/:title/
 paginate: 10
 paginate_path: "/knowledge-centre/page/:num"
