--- a/_config_stage.yml
+++ b/_config_stage.yml
@@ -5,11 +5,10 @@ description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog/
+baseurl: "/kwmassage-stage" # the subpath of your site, e.g. /blog/
 destination: ../kwmassage-stage
 url: "http://jeremykw.github.io/kwmassage-stage" # the base hostname & protocol for your site
 permalink: /:categories/:title/
-keep_files: robots.txt
 paginate: 10
 paginate_path: "/knowledge-centre/page/:num"
 twitter_username: jekyllrb
