--- a/_config.yml
+++ b/_config.yml
@@ -15,3 +15,6 @@ github_username:  jekyll
 exclude: [/__wp_backup__/, lib, canvas]
 # Build settings
 markdown: kramdown
+gems:
+    - jekyll-minifier
+    - jekyll-paginate
