--- a/_config_production.yml
+++ b/_config_production.yml
@@ -16,7 +16,7 @@ github_username:  jekyll
 exclude: [/__wp_backup__/, lib, robots.txt, canvas, gulpfile.js, node_modules]
 # Build settings
 markdown: kramdown
-gems:
+plugins:
     - jekyll-paginate
 
 ###
