--- a/_config_stage.yml
+++ b/_config_stage.yml
@@ -16,7 +16,7 @@ github_username:  jekyll
 exclude: [/__wp_backup__/, lib, canvas, gulpfile.js, node_modules]
 # Build settings
 markdown: kramdown
-gems:
+plugins:
     - jekyll-paginate
 ###
 #  To publish stage version
