exclude Gemfile, vendor

--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,16 @@ paginate: 10
 paginate_path: "/knowledge-centre/page/:num"
 twitter_username: jekyllrb
 github_username:  jekyll
-exclude: [/__wp_backup__/, lib, canvas, gulpfile.js, node_modules]
+exclude: [/__wp_backup__/, 
+          lib, 
+          canvas, 
+          gulpfile.js, 
+          node_modules,
+          vendor,
+          Gemfile,
+          Gemfile.lock,
+          package-lock.json,
+          robots.txt]
 # Build settings
 markdown: kramdown
 
